src/tests/propInInitialState/invalid/case#8/index.jsx
constructor(props){
    super(props)
    this.state = {
        inputVal: props.inputValue
    }
    // preserve the initial state in a new object
    this.baseState = this.state
}